# Downloader

./: .gitignore  CMakeLists.txt  DownloadBigFile.cpp  DownloadMultipleFile.cpp  Downloader.cpp  README.md  downloader.h  helper.cpp  miniServer.py
include/downloader/: curl_raii.h  download_manager.h  file_writer.h  http_client.h  progress.h  thread_pool.h  types.h
src/: download_manager.cpp  file_writer.cpp  http_client.cpp  main.cpp  progress.cpp  thread_pool.cpp
